separation of index app et router + correction of collapse

--- a/src/styles/Shared/collapse.css
+++ b/src/styles/Shared/collapse.css
@@ -83,7 +83,7 @@
     font-size: 1.125em;
 }
 
-.collapse__text--house{
+.collapse__text--about{
     font-size: 1.5em;
 }
 
